--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -69,35 +69,160 @@
     </section>
     
     <section class="car-features">
-    <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_1_bg.jpg">
-        <div class="parallax-section parallax">
-            <div class="container">
-                <div class="row d-flex align-items-center h100" style="height:100vh;">
-                    <div class="col pull-left">
-                        <h1 class="display-2 text-white text-capitalize">Lexus <span>IS</span></h1>
-                        <div class="h3 text-white light">Uncommon Design.</div>
-                        <div class="h3 text-white light">Unprecedented Engineering.</div>
+        <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_1_bg.jpg">
+            <div class="parallax-section parallax">
+                <div class="container">
+                    <div class="row car-features-row">
+                        <div class="col">
+                           <ul>
+                               <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
+                               <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
+                               <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
+                           </ul> 
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div> 
-    </header>
+            </div> 
+        </header>
+    </section>
+
+    <section class="car-features">
+        <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_2_bg.jpg">
+            <div class="parallax-section parallax">
+                <div class="container">
+                    <div class="row car-features-row float-right">
+                        <div class="col">
+                           <ul>
+                               <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
+                               <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
+                               <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
+                           </ul> 
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </header>
     </section>
     
-
-    
     <section class="car-features">
-        <img src="/images/block_2_bg.jpg" alt="" class="img-fluid">  
-    </section> 
-    <section class="car-features">
-        <img src="/images/block_3_bg.jpg" alt="" class="img-fluid">  
+        <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_3_bg.jpg">
+            <div class="parallax-section parallax">
+                <div class="container">
+                    <div class="row car-features-row">
+                        <div class="col">
+                           <ul>
+                               <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
+                               <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
+                               <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
+                           </ul> 
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </header>
     </section>
   
     <section class="car-features">
-        <div class="car-model-pic mx-auto wrap">
-            <img src="/images/angled_IS.png" alt="" class="img-fluid">  
+        <div class="container">
+            <div class="car-model-pic mx-auto wrap">
+                <img src="/images/angled_IS.png" alt="" class="img-fluid">  
+            </div>
+               <span class="h3 mx-auto light d-block w-75 py-5">The IS brings together show-stopping look with <span class="font-weight-bold">advanced hybrid technology</span> and unparalleled comfort. With athletic stance and longe coupe roofline, this exeptional sports saloon is engineered to deliver an effortless, heart-racing performance.</span>
         </div>
-       <p class="h3 text-center mx-auto text-thin">The IS brings together show-stopping look with <b>advanced hybrid technology</b> and unparalleled comfort. With athletic stance and longe coupe roofline, this exeptional sports saloon is engineered to deliver an effortless, heart-racing performance.</p>
+    </section>
+       
+    <section class="car-vr">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="display-4"> Drive in Style</div>
+                    <div class="h4 light">360 Interior View</div>
+                </div>
+                <div class="col">
+                    <div class="car-vr-models mx-auto text-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><span>IS 350 F Sport</span></li>
+                            <li class="list-inline-item active"><span>IS 200T EX</span></li>
+                            <li class="list-inline-item"><span>IS 200T E</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="vrview"><iframe allowfullscreen="true" scrolling="no" width="100%" height="800" src="http://arkv4.dsdev.co.za/static/index.html?image=http://arkv4.dsdev.co.za/static/examples/gallery/fortuner.jpg&amp;" style="border: 0px;"></iframe></div>
+    </section>
+    <section class="car-info-table my-4">
+        <div class="container">
+           <div class="row">
+               <div class="col-3">
+                   <ul class="nav nav-tabs" id="installments-info" role="tablist">
+                      <li class="nav-item">
+                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><span>IS 200T E</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"><span>IS 200T EX</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"><span>IS 350 F Sport</span></a>
+                      </li>
+                    </ul>
+               </div>
+                   <div class="col-9">
+                        <div class="tab-content" id="tab-content-1">
+                            <div class="h2 text-uppercase">Installments</div>
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                @Html.Partial("car-info-installments")
+                            </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                @Html.Partial("car-info-installments")
+                            </div>
+                            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                                @Html.Partial("car-info-installments")
+                            </div>
+                        </div>
+                    </div>   
+               </div>
+           </div>
+    </section> 
+    <section class="car-info-table my-4">
+        <div class="container">
+           <div class="row">
+               <div class="col-3">
+                   <ul class="nav nav-tabs" id="maintenance-info" role="tablist">
+                      <li class="nav-item">
+                        <a class="nav-link active" id="1" data-toggle="tab" href="#1" role="tab" aria-controls="1" aria-selected="true"><span>The Lexus Warranty</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="2" data-toggle="tab" href="#2" role="tab" aria-controls="2" aria-selected="false"><span>The Lexus Distance Plan</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="3" data-toggle="tab" href="#3" role="tab" aria-controls="3" aria-selected="false"><span>Booking a service for your Lexus</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="4" data-toggle="tab" href="#4" role="tab" aria-controls="4" aria-selected="false"><span>Lexus body and paint repairers</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="5" data-toggle="tab" href="#5" role="tab" aria-controls="5" aria-selected="false"><span>Lexus roadside assistance</span></a>
+                      </li>
+                    </ul>
+               </div>
+                   <div class="col-9">
+                        <div class="tab-content" id="tab-content-2">
+                            <div class="h2 text-uppercase">Maintenance</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, perferendis molestias explicabo quod consequuntur assumenda quidem quia voluptates earum dolorum porro commodi doloremque optio, rerum? Voluptates officia unde sapiente praesentium!</p>
+                            <div class="tab-pane fade show active" id="1" role="tabpanel" aria-labelledby="1">
+                                @Html.Partial("car-info-maintenance")
+                            </div>
+                            <div class="tab-pane fade" id="2" role="tabpanel" aria-labelledby="2">
+                                @Html.Partial("car-info-maintenance")
+                            </div>
+                            <div class="tab-pane fade" id="3" role="tabpanel" aria-labelledby="3">
+                                @Html.Partial("car-info-maintenance")
+                            </div>
+                        </div>
+                    </div>   
+               </div>
+           </div>
     </section>
    
     
